# SomeCode

./: README.md  format  generate_new_dir.sh
HashTable/: build_and_run_test  test.cpp
HashTable/include/: HashTable.hpp  HashUtils.hpp
LRU/: CMakeLists.txt  build_and_run_test  test.cpp
LRU/include/: LRU.hpp
TemplateForPrograms/: CMakeLists.txt  build_and_run_test  test.cpp
Treap/: CMakeLists.txt  TreapWithImplicitkey.cpp  TreapWithImplicitkey.hpp  build_and_run_test  test.cpp
Treap/include/: TreapWithImplicitkey.cpp  TreapWithImplicitkey.hpp
docs/: description.md  testing.md
